--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,41 +1,42 @@
+# version: '3.8'
+
 services:
-  appdaf:
-    build:
-      context: .
-      dockerfile: .docker/php/Dockerfile
-    volumes:
-      - .:/var/www/html
-    depends_on:
-      - db
-    networks:
-      - app-net
-
-  db:
-    image: postgres:15
-    environment:
-      POSTGRES_DB: appdafdb
-      POSTGRES_USER: appdaf
-      POSTGRES_PASSWORD: password
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-    networks:
-      - app-net
-
-  nginx:
-    image: nginx:latest
+  app:
+    build: .
+    container_name: appwoyofal
     ports:
-      - "8088:80"
-    volumes:
-      - .:/var/www/html
-      - .docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - "8080:80"
+    environment:
+      - DB_HOST=postgres
+      - DB_PORT=5432
+      - DB_NAME=woyofal_db
+      - DB_USER=woyofal_user
+      - DB_PASSWORD=woyofal_password
     depends_on:
-      - appdaf
+      - postgres
+    volumes:
+      - ./logs:/var/log/nginx
     networks:
-      - app-net
+      - woyofal_network
+
+  postgres:
+    image: postgres:15-alpine
+    container_name: woyofal_postgres
+    environment:
+      - POSTGRES_DB=woyofal_db
+      - POSTGRES_USER=woyofal_user
+      - POSTGRES_PASSWORD=woyofal_password
+    ports:
+      - "5436:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+      - ./migrations:/docker-entrypoint-initdb.d
+    networks:
+      - woyofal_network
 
 volumes:
-  pgdata:
+  postgres_data:
 
 networks:
-  app-net:
+  woyofal_network:
     driver: bridge
